# random-sequence-generator

./: CMakeLists.txt  README.md
arduino/analog_read/: analog_read.ino
arduino/uart_test/: uart_test.ino
src/: array_utils.c  array_utils.h  main.c  random.c  random.h
src/data_sources/: generator.c  generator.h
src/data_sources/soundcard/: soundcard_noise.c  soundcard_noise.h
src/data_sources/white_noise_gen/: uart.c  uart.h
src/utils/: array_utils.c  array_utils.h  buffer_utils.c  buffer_utils.h  save_to_file.c  save_to_file.h
